# Laundry-Solution

./: .gitignore  docker-compose.yml
apps/admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: App.tsx
apps/backend/: pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 044f3326d5be_add_order_turnaround_total_kobo_and_.py  118f4fed3cc1_add_staff_auth_fields.py  b50f31df938d_initial_schema.py  b976a3496b07_add_server_seq_for_sync.py  c567ef5dd1c8_replace_orderstatus_pipeline.py
apps/backend/app/: config.py  database.py  main.py  queue.py  worker.py
apps/backend/app/dependencies/: auth.py  queue.py
apps/backend/app/jobs/: receipts.py
apps/backend/app/models/: __init__.py  base.py  branch.py  customer.py  order.py  order_line.py  organization.py  payment.py  price_rule.py  service.py  staff.py  status_event.py
apps/backend/app/notifications/: __init__.py  base.py  fake.py  real.py
apps/backend/app/routers/: admin.py  auth.py  customers.py  order_actions.py  orders.py  pickup.py  sync.py
apps/backend/app/schemas/: auth.py  customers.py  orders.py  payments.py  status.py  sync.py
apps/backend/app/services/: auth.py  customers.py  orders.py  payments.py  pricing.py  status.py  sync.py
apps/backend/tests/: conftest.py  test_api.py  test_auth.py  test_jobs.py  test_models.py  test_orders.py  test_pricing.py  test_sync.py
apps/tablet/: App.tsx  app.json  babel.config.js  babel.config.test.js  jest.config.js  package-lock.json  package.json  tsconfig.json
(+52 files in other folders)
